--- a/frondend/src/Layout/AppStyle.scss
+++ b/frondend/src/Layout/AppStyle.scss
@@ -21,5 +21,12 @@
         width: 100%;
         height: 282px;
         top: 600px;
+        left: 0px;
+    }
 
+    .container{
+        display: flex;
+        justify-content: space-around;
+        align-items: baseline;
+        height: 100vh;
     }
