--- a/frondend/src/components/loginStyle.scss
+++ b/frondend/src/components/loginStyle.scss
@@ -11,26 +11,24 @@
     font-size: 20px;
     line-height: 29px;
     color: #006EB4;
-    
-    padding: 10px;
-  margin: 50px auto;
-  max-width: 500px;
 
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  display: block;
+    padding: 10px;
+    margin: 50px auto;
+    max-width: 500px;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: block;
   
     
 }
 
 
 .confirmButton{
-    position: absolute;
+    
     width: 160px;
     height: 50px;
-
-    top: 80%;
     
     background: #0069A3;
     border: #ffffff;
@@ -38,17 +36,21 @@
     font-style: normal;
     font-weight: 28;
     font-size: 24px;
-    line-height: 29px;
+    line-height: 28px;
     color: #ffffff;
-    display: table;
 
+    display: flex;
+    justify-content: center;
+    
+
+    margin: auto;
+    
 }
 
 .container{
-    
-    
-    
-    align-items: center;
+    display: flex;                  
+  align-items: center;
+  flex-direction: column; /* Añadido para solución */
     
 }
 
@@ -71,6 +73,7 @@
     color: #0f1215;
     left: 80%;
     top: 80%;
+    margin-top: 100px;
 }
 
 .input{
@@ -82,7 +85,7 @@
     background: #FCFBFB;
     border: 1px solid #000000;
     border-radius: 5px;
-
+    margin-bottom: 30px;
 
     
 }
@@ -96,9 +99,6 @@
 }
 
 .correo{
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
-.contraseña{
-    margin-top: 30px;
-}
